--- a/assets/css/commons.css
+++ b/assets/css/commons.css
@@ -64,3 +64,30 @@ body {
 #footer {
     margin-top: 3rem;
 }
+
+/* btn-style */
+.btn-style {
+    background-color: var(--mainColor);
+    padding: 0.8rem 3rem;
+    color: var(--white);
+    border-radius: 40px;
+    font-size: 1rem;
+    line-height: 1;
+    font-family: var(--fontN);
+    display: inline-block;
+    cursor: pointer;
+}
+
+/* input */
+.input-style {
+    background-color: var(--white);
+    border-radius: 5px;
+    padding: 1.2rem 1.4rem;
+    font-size: 1rem;
+}
+
+/* requied */
+.required::after {
+    content: ' *';
+    color: var(--mainColor);
+}
