--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -178,3 +178,88 @@ header__inner .member: 로그인 / 회원가입
         font-size: 0.875rem;
     }
 }
+
+.modal_btn {
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 10px 30px;
+    font-size: 1rem;
+    font-family: var(--fontG);
+    font-weight: 500;
+    background-color: var(--mainColor);
+    color: var(--white);
+    border-radius: 30px;
+    border: 1px solid var(--mainColor);
+    transition: all 0.2s;
+}
+
+.modal_btn:hover {
+    background-color: var(--white);
+    color: var(--mainColor);
+    border-radius: 10px;
+}
+
+.member ul {
+    position: relative;
+}
+
+.modal__inner {
+    position: relative;
+}
+
+.modal {
+    display: none;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    top: 44px;
+    right: 0;
+    background-color: var(--white);
+    color: var(--mainColor);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+    border-radius: 5px;
+    padding: 10px;
+    outline: 1px solid red;
+    transition: opacity 1s ease-in-out;
+}
+
+.modal_popup {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal_popup span {
+    font-size: 0.75rem;
+    font-weight: 400;
+}
+
+.modal_popup em {
+    font-size: 0.82rem;
+    font-weight: 700;
+}
+
+.modal_popup p {
+    font-size: 0.75rem;
+}
+
+.logout_btn {
+    margin-top: 10px;
+    padding: 8px 16px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--fontG);
+    font-weight: 500;
+    width: 100%;
+    border-radius: 10px;
+    background-color: var(--mainColor);
+    color: var(--black);
+}
+
+.logout_btn svg {
+    padding-left: 5px;
+}
