--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -57,17 +57,6 @@
     color: var(--mainColor);
 }
 
-/* login .submit */
-#login .submit button {
-    padding: 10px 20px;
-    width: 100%;
-    height: 60px;
-    margin-top: 20px;
-    background-color: var(--mainColor);
-    color: var(--backgroundColor);
-    border-radius: 10px;
-}
-
 /* login .checks */
 #login .checks {
     width: 80%;
@@ -366,7 +355,7 @@
     text-align: center;
 }
 
-.member__insert .insert__btn {
+.insert__btn {
     width: 100%;
     color: var(--white);
     background-color: var(--mainColor);
@@ -374,6 +363,7 @@
     font-size: 1.25rem;
     cursor: pointer;
     border-radius: 5px;
+    margin-top: 1rem;
 }
 
 .login__wrap .btn {
@@ -404,5 +394,7 @@
 
     .member__insert div .check .btn {
         width: 100%;
+        height: 100%;
+        padding: 1rem;
     }
 }
