--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -81,32 +81,34 @@
 }
 
 /* main__IDfind */
-.main__IDfind .title01 {
-    font-size: 1.25rem;
-    font-family: var(--fontG);
-    text-align: center;
-    color: var(--mainColor);
-}
-
-.main__IDfind .title02 {
+.main__search_id .ID_title01 {
     font-size: 2.875rem;
     font-family: var(--fontG);
-    font-weight: 600;
+    font-weight: bold;
+    margin-top: 15rem;
     text-align: center;
     color: var(--mainColor);
-    margin-top: 100px;
 }
 
-.main__IDfind img {
-    margin-top: 40px;
-    width: 60%;
-    height: auto;
-    margin-left: 88px;
-    margin-bottom: 20px;
-
+.main__search_id .ID_title02 {
+    font-size: 1.125rem;
+    font-family: var(--fontG);
+    text-align: center;
+    color: var(--mainColor);
 }
 
-#IDfind .mail input {
+.main__search_id .secrch_img {
+    width: 100%;
+    height: 31vh;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+#search_id .secrch_mail input {
     padding: 10px 20px;
     width: 100%;
     height: 60px;
@@ -116,11 +118,11 @@
     border-radius: 10px;
 }
 
-#IDfind .mail input::placeholder {
+#search_id .secrch_mail input::placeholder {
     color: var(--mainColor);
 }
 
-#IDfind .nickname input {
+#search_id .secrch_name input {
     padding: 10px 20px;
     width: 100%;
     height: 60px;
@@ -130,11 +132,11 @@
     border-radius: 10px;
 }
 
-#IDfind .nickname input::placeholder {
+#search_id .secrch_name input::placeholder {
     color: var(--mainColor);
 }
 
-#IDfind .submit button {
+#search_id .submit .button {
     padding: 10px 20px;
     width: 100%;
     height: 60px;
@@ -144,12 +146,24 @@
     border-radius: 10px;
 }
 
-#IDfind .checks {
+
+#search_id .submit .searchID_btn {
+    width: 100%;
+    color: var(--white);
+    background-color: var(--mainColor);
+    padding: 1rem 2rem;
+    font-size: 1.25rem;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 1rem;
+}
+
+#search_id .secrch_checks {
     width: 80%;
     margin: 0 auto;
 }
 
-#IDfind .checks ul {
+#search_id .secrch_checks ul {
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -159,12 +173,13 @@
     font-size: 12px;
 }
 
-#IDfind .checks li {
+#search_id .secrch_checks li {
     text-align: center;
 }
 
-#IDfind .checks li a {
+#search_id .secrch_checks li a {
     text-decoration: none;
+    font-size: 1rem;
 }
 
 /* main__PWfind */
@@ -290,7 +305,7 @@
     font-weight: bold;
 }
 
-#main .container {
+.login__container {
     display: flex;
     flex-direction: column;
     justify-content: center;
